5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1667_2975.log
== TEST (2019-04-16 16:20:23) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	i=f*a
	i1=f*b
	print(i+il)
	print("Sim")
else:
	print("n")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(i+il)
NameError: name 'il' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:20:34) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	i=f*a
	i1=f*b
	print(i+i1)
	print("Sim")
else:
	print("n")
	
-- OUTPUT:
12.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:32) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	i=f*a
	i1=f*b
	s=i+i1
	s1=s-c
	print(s1)
else:
	print("n")
	
-- OUTPUT:
-3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:37) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	i=f*a
	i1=f*b
	s=i+i1
	s1=s-c
	print(s1)
else:
	print("n")
	
-- OUTPUT:
-3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:21:56) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	i=f*a
	i1=f*b
	u=i+i1
	s1=u-c
	print(s1)
else:
	print("n")
	
-- OUTPUT:
-3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:48) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	print(p1,p2)
else:
	print("n")
	
-- OUTPUT:
6.0 7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:10) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	p3=p1+p2
	print(p1,p2,p3)
else:
	print("n")
	
-- OUTPUT:
6.0 7.0 13.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:23:36) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	print(p1+p2)
	print("sim")
else:
	print("n")
	
-- OUTPUT:
13.0
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:39) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	print(p1+p2)
	print("Sim")
else:
	p1=a*f
	p2=b*s
	print(p1+p2)
	print("Nao")
	
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:44) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	print(p1+p2)
	print("Sim")
else:
	p1=a*f
	p2=b*s
	print(p1+p2)
	print("Nao")
	
-- EXECUTION TIME:
0.206427
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Sim
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:26:07) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(p3)
print(R)
	
-- EXECUTION TIME:
0.120332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1667/2975/main.py", line 21, in <module>
    print(p3)
NameError: name 'p3' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:08) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(p3)
print(R)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(p3)
NameError: name 'p3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:26) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c

if(d<=c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:02) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=p-c
print(d)
if(d<c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- OUTPUT:
-8.5
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:14) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=c-d
print(d)
if(d<c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    d=c-d
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:23) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=c-p
print(d)
if(d<c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- OUTPUT:
8.5
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:36) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=c-p
print(d)
if(d<c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- OUTPUT:
8.5
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:48) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p=f+s
d=c-p
print(d)
if(d<c):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- OUTPUT:
8.5
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:47) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5

print(d)
if(c<=20):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(d)
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:28:53) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5

if(c<=20):
	p1=a*f
	p2=b*s
	P3=p1+p2
	R="Sim"
else:
	p1=a*f
	p2=b*s
	pQ=p1+p2
	P3=pQ-c
	R="Nao"
print(P3)
print(R)
	
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:29) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p1=a*f
p2=b*s
p3=p1+p2
if(c<=p3):
	
	P=p3
	R="Sim"
else:
	P=p3
	R="Nao"
print(P)
print(R)
	
-- OUTPUT:
13.0
Nao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:30:51) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p1=a*f
p2=b*s
p3=p1+p2
if(p3<=c):
	
	P=p3
	R="Sim"
else:
	P=p3
	R="Nao"
print(P)
print(R)
	
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:02) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p1=a*f
p2=b*s
p3=p1+p2
if(p3<=c):
	
	P=p3
	R="Sim"
else:
	P=p3
	R="Nao"
print(P)
print(R)
	
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:31:09) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p1=a*f
p2=b*s
p3=p1+p2
if(p3<=c):
	
	P=p3
	R="Sim"
else:
	P=p3
	R="Nao"
print(P)
print(R)
	
-- OUTPUT:
13.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:31:14) 
-- CODE:
a=int(input("quantidade de sucos:"))
b=int(input("quantidadde de salgados:"))
c=float(input("valor disponivel:"))

f=3.0
s=3.5
p1=a*f
p2=b*s
p3=p1+p2
if(p3<=c):
	
	P=p3
	R="Sim"
else:
	P=p3
	R="Nao"
print(P)
print(R)
	
-- EXECUTION TIME:
0.179179
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Nao
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
